fix spacing of header, and maybe email button

--- a/styles.css
+++ b/styles.css
@@ -374,11 +374,14 @@ a {
 
 /*fix layout for phones in portrait*/
 @media only screen and (max-width: 450px) {
-  header {
-  	padding: 0 0 0 0;
+  #header {
+    margin: 0;
+  }
+  #tech-text {
+    margin: 0px 0px 20px 0px;
   }
   .Description p {
-    margin: 0 5px 0 5px;
+    margin: 0 10px 0 5px;
   }
   .contact div{
     display: block;
